--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node app.js",
+    "test": "mocha app.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "json-bigint": "^1.0.0"
-  },
   "devDependencies": {
     "assert": "^2.1.0",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "jest-puppeteer": "^9.0.1",
+    "json-bigint": "^1.0.0",
     "mocha": "^10.2.0",
     "start-server-and-test": "^2.0.3",
     "supertest": "^6.3.3"
