Updated Fibonacci Calculation Method

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mocha": "^10.2.0",
     "start-server-and-test": "^2.0.3",
     "supertest": "^6.3.3"
+  },
+  "dependencies": {
+    "fibonacci": "^1.6.11"
   }
 }
